plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.4'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'org.adhuc.library'
version = '1'

java {
	sourceCompatibility = '21'
}

repositories {
	mavenCentral()
}

dependencyManagement {
	imports {
		mavenBom 'org.springframework.modulith:spring-modulith-bom:1.2.4'
		mavenBom 'org.jmolecules:jmolecules-bom:2023.1.6'
	}
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-hateoas'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.data:spring-data-rest-webmvc'
	implementation 'org.springframework.modulith:spring-modulith-starter-core'
	implementation 'org.springframework.modulith:spring-modulith-starter-insight'
	implementation 'org.jmolecules:jmolecules-ddd'
	implementation 'org.jmolecules:jmolecules-onion-architecture'
	implementation 'com.atlassian.oai:swagger-request-validator-spring-webmvc:2.42.0'
	implementation('commons-validator:commons-validator:1.9.0') {
		exclude group: 'commons-collections', module: 'commons-collections'
	}

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.modulith:spring-modulith-starter-test'
	testImplementation 'org.jmolecules.integrations:jmolecules-archunit'
	testImplementation 'com.tngtech.archunit:archunit-junit5:1.3.0'
	testImplementation 'net.jqwik:jqwik:1.9.1'
}

tasks.withType(JavaCompile).configureEach {
	options.compilerArgs.add('--enable-preview')
	options.compilerArgs.add('-parameters')
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs += '--enable-preview'
}
